# contentcompass

./: README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: analysis.py  default.sqlite  get_content.py  guidelines.py  main.py  trulens_feedbacks.py  video.description  video.info.json
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/prisma/: schema.prisma
frontend/src/: env.mjs  middleware.ts
frontend/src/app/: error.tsx  layout.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/app/analysis/[id]/: page.tsx
frontend/src/app/app/analysis/create/: page.tsx
frontend/src/app/app/content/[id]/: page.tsx
frontend/src/app/app/content/create/: page.tsx
frontend/src/app/app/guideline/[id]/: page.tsx
frontend/src/app/app/guideline/create/: page.tsx
frontend/src/app/app/quick-compare/: page.tsx
frontend/src/components/: analysis-card.tsx  analysis-list.tsx  content-list.tsx  guideline-list.tsx  layout.tsx  list-card.tsx  loader.tsx  new-analysis.tsx  new-content.tsx  new-guideline.tsx  side-tabs.tsx
frontend/src/server/api/: root.ts  trpc.ts
frontend/src/server/api/routers/: analysis.ts  content.ts  guideline.ts  user.ts
frontend/src/types/: types.ts
frontend/src/utils/: axios.ts  utils.ts
